--- a/package.json
+++ b/package.json
@@ -3,24 +3,38 @@
     "version": "0.4.0",
     "description": "",
     "main": "index.js",
-    "keywords": ["node-red", "tp-link", "tplink", "hs100"],
+    "keywords": [
+        "node-red",
+        "tp-link",
+        "tplink",
+        "hs100"
+    ],
+    "dependencies": {
+        "fx-hs100-api": "^0.3.0"
+    },
     "devDependencies": {
-        "chai": "^3.0.0",
-        "eslint": "^4.11.0",
-        "eslint-config-biddster": "^0.4.0",
-        "eslint-config-prettier": "^2.8.0",
-        "lodash": "^4.17.4",
+        "@hapi/eslint-config-hapi": "13.0.2",
+        "@hapi/eslint-plugin-hapi": "4.3.5",
+        "babel-eslint": "10.1.0",
+        "chai": "^4.2.0",
+        "eslint": "^7.7.0",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.2.11",
+        "lodash": "^4.17.20",
         "markdown-to-html": "0.0.13",
-        "mocha": "^3.1.2",
+        "mocha": "^8.1.1",
         "node-red-contrib-mock-node": "^0.4.0",
-        "nyc": "^11.3.0",
-        "prettier": "^1.8.2"
+        "npm-check-updates": "^7.1.1",
+        "nyc": "^15.1.0",
+        "prettier": "^2.0.5"
     },
     "directories": {
         "test": "tests"
     },
     "scripts": {
-        "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js"
+        "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js",
+        "update-dependencies": "./node_modules/.bin/ncu -u && npm install",
+        "lint": "eslint ."
     },
     "author": "@biddster",
     "license": "MIT",
@@ -28,29 +42,53 @@
         "type": "git",
         "url": "https://github.com/biddster/node-red-contrib-hs100.git"
     },
-    "dependencies": {
-        "fx-hs100-api": "^0.3.0"
-    },
     "node-red": {
         "nodes": {
             "hs100": "index.js"
         }
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
     "eslintConfig": {
-        "env": {
-            "es6": true,
-            "node": true,
-            "mocha": true
-        },
+        "extends": "@hapi/eslint-config-hapi",
+        "parser": "babel-eslint",
         "parserOptions": {
-            "ecmaVersion": 6,
-            "sourceType": "module"
+            "ecmaVersion": 2020,
+            "sourceType": "script"
         },
-        "extends": ["eslint-config-biddster/es6-node", "prettier"]
+        "overrides": [
+            {
+                "files": [
+                    "*.js"
+                ],
+                "rules": {
+                    "@hapi/hapi/scope-start": "off",
+                    "comma-dangle": "off",
+                    "brace-style": "off"
+                }
+            }
+        ]
     },
     "prettier": {
         "singleQuote": true,
         "tabWidth": 4,
         "printWidth": 96
+    },
+    "nyc": {
+        "exclude": "tests/**"
+    },
+    "lint-staged": {
+        "*.js": [
+            "prettier --write",
+            "eslint",
+            "git add"
+        ],
+        "*.{md,html,json}": [
+            "prettier --write",
+            "git add"
+        ]
     }
 }
