--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-red-contrib-hs100",
     "version": "0.4.0",
-    "description": "",
+    "description": "Node red module for controlling HS100 and HS110 devices.",
     "main": "index.js",
     "keywords": [
         "node-red",
